# graphwiz-trader

./: .dockerignore  .dockerignore.paper  .env.backup  .env.docker  .env.example  .env.live  .env.live.example  .gitignore  .opencode.jsonc  .opencodeignore  .pre-commit-config.yaml  ADVANCED_STRATEGIES_COMPLETE.md  AGENT_LOOPER_CONFIGURED.md  ALERTS_INTEGRATION_COMPLETE.md  API.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  CONFIG_REFACTORING.md  CONTAINER_PAPER_TRADING.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.live-trading  Dockerfile.paper-trading  FEATURES_1_5_IMPLEMENTATION_COMPLETE.md  GRID_TRADING_FIX_RESULTS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LIVE_TRADING_READINESS.md  MODERN_STRATEGIES_BACKTESTING_REPORT.md  MODERN_STRATEGIES_COMPLETE.md  Makefile  PAPER_TRADING_QUICKSTART.md  PERFORMANCE_OPTIMIZATIONS.md  QLIB_COMPLETE_SUMMARY.md  QLIB_INTEGRATION_ANALYSIS.md  QLIB_PHASE2_SUMMARY.md  QUICK_START.md  README.md  REVISIONS.md  (+47 more)
.github/: dependabot.yml
backtests/: README.md
config/: config.example.yaml
dashboards/: README.md  prometheus.yml
deploy/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  deploy.sh  grafana-datasources.yml  graphwiz-trader.service  nginx.conf  prometheus.yml  setup_user.sh
docs/: ADVANCED_STRATEGIES_DOCUMENTATION.md  AGENTS.md  AGENTS_IMPLEMENTATION_SUMMARY.md  AGENTS_QUICK_REFERENCE.md  BACKTESTING.md  BACKTESTING_IMPLEMENTATION.md  CONTRIBUTING.md  DASHBOARD.md  DASHBOARD_README.md  DEPLOYMENT_STATUS.md  DOCKER_PAPER_TRADING_QUICKSTART.md  EXCHANGE_COMPARISON_GERMANY.md  FINAL_REPORT.md  GOEMOTIONS_EXTENDED_PAPER_TRADING.md  GOEMOTIONS_PAPER_TRADING_TEST.md  GOEMOTIONS_STRATEGY.md  GOEMOTIONS_SUMMARY.md  GRID_TRADING_FIX_COMPLETE.md  GRID_TRADING_PAPER_TRADING_DEPLOYED.md  HFT_IMPLEMENTATION_STATUS.md  HFT_INTEGRATION_PLAN.md  HFT_README.md  HFT_USAGE_GUIDE.md  IMMEDIATE_STEPS_COMPLETE.md  KNOWLEDGE_GRAPH_INTEGRATION.md  LIVE_TRADING.md  LIVE_TRADING_DEPLOYMENT.md  LIVE_TRADING_GERMANY.md  LIVE_TRADING_IMPLEMENTATION.md  LIVE_TRADING_QUICKSTART.md  LIVE_TRADING_READINESS.md  MODERN_STRATEGIES_DOCUMENTATION.md  MODERN_STRATEGIES_INTEGRATION_COMPLETE.md  MODERN_STRATEGIES_INTEGRATION_GUIDE.md  MONITORING.md  MONITORING_IMPLEMENTATION_SUMMARY.md  MONITORING_QUICK_REFERENCE.md  OPTIMIZER_README.md  PAPER_TRADING.md  PAPER_TRADING_DOCKER.md  (+23 more)
examples/: advanced_strategies_demo.py  backtesting_example.py  dashboard_integration_example.py  dashboard_requirements.txt  dynamic_grid_rebalancing.py  grid_trading_paper_trading_deploy.py  grid_trading_quick_demo.py  knowledge_graph_usage.py  modern_strategies_backtesting.py  modern_strategies_demo.py  modern_strategies_paper_trading.py  modern_strategies_trading_integration.py  monitoring_example.py  multi_strategy_paper_trading.py  multi_symbol_grid_trading.py  optimizer_demo.py  qlib_phase2_demo.py  qlib_phase3_demo.py  qlib_phase4_demo.py  qlib_quickstart.py  risk_management_demo.py  risk_management_trading.py  trading_dashboard.py
logs/: validation_metrics_20260101_134138.json  (+1 more)
monitoring/: loki-config.yaml  (+1 more)
(+948 files in other folders)
